# Learning_Github_Actions

./: .gitignore  CMakeLists.txt  README.md  basic_functions.cpp  basic_functions.h  main.cpp  test_additions.cpp  test_multiplication.cpp  testing.cpp
.github/workflows/: build-and-test.yml  cmake-single-platform.yml
